Added dummy values to product A

--- a/index.html
+++ b/index.html
@@ -24,13 +24,7 @@ layout: default
 </section>
 {% endif %}
 
-<div id="home">
-  <h2>Pages</h2>
-  <ul class="pages">
-    {% for page in site.pages %}
-      <li>
-        <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+<section>
+  <h2>Add Pages</h2>
+  <p><a href="https://github.com/ATARC-Example/Product-A/new/master/_pages">Add new page</a></p>
+</section>
